--- a/COVID-19-DATASETS/.gitattributes
+++ b/COVID-19-DATASETS/.gitattributes
@@ -1,1 +1,3 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
+CORD19S4PCKR.csv filter=lfs diff=lfs merge=lfs -text
+metadata.csv filter=lfs diff=lfs merge=lfs -text
